2001-08-18  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-config.[ch]: switched to bonobo-config

	* gda-corba.[ch]: switched to BonoboActivation

2001-08-17  Rodrigo Moya <rodrigo@gnome-db.org>

	* Makefile.am: s/GDA/GNOME_Database

2001-08-03  Rodrigo Moya <rodrigo@gnome-db.org>

	* .[ch]: s/oaf/bonobo_activation

	* Makefile.am: renamed library for GNOME 2 platform, and install
	headers in $(includedir)/gnome/2/gda

2001-07-29  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-database.c (gda_xml_database_table_find): check for NULL
	pointers before using them
	(gda_xml_database_table_new): create the "TABLES" node if it's not
	created yet

2001-07-25  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-document.c (gda_xml_document_get_compress_mode):
	(gda_xml_document_set_compress_mode): new functions

	* gda-util.c (gda_util_hash_to_list): add g_strdup'ed value to the
	returned GList

2001-07-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-database.[ch]: rework

	* gda-common-private.h: new file for common declarations

2001-07-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-common-defs.h: new file containing some #define's needed
	all over

	* *.h: s/#if defined(__cplusplus).../G_BEGIN_END_DECLS

2001-07-14  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-quark-list.c (gda_quark_list_add_from_string): g_strdup
	the hash table key also

	(gda_quark_list_free): free the contents of the hash table

2001-07-13  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xql-const.[ch], gda-xql-dml.[ch]
	more conversion of the XML queries library

2001-07-12  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-util.c: gray out the call to xmlIOParseDTD until we can
	use libxml2

2001-07-09  Akira TAGOH <tagoh@gnome-db.org>

	* gda-xml-util.c: fixed typo.

2001-07-08  Rodrigo Moya <rodrigo@gnome-db.org>

	* gda-xml-query/*: moved some files into the libgda-common directory
	itself, with some changes:
		- XmlQueryItem is now GdaXmlItem
		- XmlQueryBin is now GdaXmlBinItem