@@ -1,3 +1,8 @@
+2001-08-19  Rodrigo Moya <rodrigo@gnome-db.org>
+
+	* gda-config.c (gda_config_add_listener, gda_config_remove_listener):
+	new functions for adding/removing configuration listeners
+
 2001-08-18  Rodrigo Moya <rodrigo@gnome-db.org>
 
 	* gda-config.[ch]: switched to bonobo-config
